Fill Region Option of Select Shortest Path does not React Well Near Ngons in Face Select Mode #48009

Closed
opened 2016-03-30 21:33:25 +02:00 by ronan ducluzeau · 6 comments

System Information
Ubuntu 14.04 64bits Nvidia Titan Black

Blender Version
Broken: 2.77 756ab5e
Worked: (optional)

Short description of error
Fill Region is a new option added to Select Shortest Path operator to select a quad faces area in two clicks.
Option is explained by gif, here.
http://blenderartists.org/forum/showthread.php?395328-A-MODO-artist-learns-Blender-Comparing-the-Basics-VIDEO&p=3029959&viewfull=1#post3029959

Clicking checkbox or using Ctrl Shift RMB click shortcut is working well in vertex select mode.

But in edge select mode, operator does not select faces adjacent to edges clicked by user.
So, result is weird. Selection corresponds to an area of faces + two edges next to it.

In face select mode, operator works well, except in case when a choosen face is in a face loop adjacent to an Ngon or a face loop next to this kind of loop.
In this case, too much faces are selected out of expected region.

Exact steps for others to reproduce the error
Create a cylinder with Ngon caps.
Add edge loops to cylinder.
Select a face in middle of cylinder.
Then, do a Ctrl Shift RMB click on a quad face next to an Ngon cap. -> more faces than expected region are selected.

Select_SP_Fill.blend
In this .blend, select a face in last loop at bottom of cylinder or on next to last loop.

**System Information** Ubuntu 14.04 64bits Nvidia Titan Black **Blender Version** Broken: 2.77 756ab5e Worked: (optional) **Short description of error** Fill Region is a new option added to Select Shortest Path operator to select a quad faces area in two clicks. Option is explained by gif, here. http://blenderartists.org/forum/showthread.php?395328-A-MODO-artist-learns-Blender-Comparing-the-Basics-VIDEO&p=3029959&viewfull=1#post3029959 Clicking checkbox or using Ctrl Shift RMB click shortcut is working well in vertex select mode. But in edge select mode, operator does not select faces adjacent to edges clicked by user. So, result is weird. Selection corresponds to an area of faces + two edges next to it. In face select mode, operator works well, except in case when a choosen face is in a face loop adjacent to an Ngon or a face loop next to this kind of loop. In this case, too much faces are selected out of expected region. **Exact steps for others to reproduce the error** Create a cylinder with Ngon caps. Add edge loops to cylinder. Select a face in middle of cylinder. Then, do a Ctrl Shift RMB click on a quad face next to an Ngon cap. -> more faces than expected region are selected. [Select_SP_Fill.blend](https://archive.blender.org/developer/F299629/Select_SP_Fill.blend) In this .blend, select a face in last loop at bottom of cylinder or on next to last loop.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro

An image showing results obtained in edge select mode and face select mode.
SSP_FR.jpg

An image showing results obtained in edge select mode and face select mode. ![SSP_FR.jpg](https://archive.blender.org/developer/F299634/SSP_FR.jpg)
Campbell Barton self-assigned this 2016-03-31 08:20:20 +02:00

This isn't exactly a bug.
There are some rules for how the tool works which happen to give odd-results when used next to large ngons (the ngons connect to so many faces that a short path can be traced along them).

Nevertheless, it looks like a bug. I'll check on changing the method so they don't cause issues.

This isn't exactly a bug. There are some rules for how the tool works which happen to give odd-results when used next to large ngons (the ngons connect to so many faces that a short path can be traced along them). Nevertheless, it looks like a bug. I'll check on changing the method so they don't cause issues.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by c6b27dd4fa

This issue was referenced by c6b27dd4fa02b2609a18ce3aa9c71b64e12b500d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48009
No description provided.